hphp/hack/test/typecheck/anon_fun/anon1.php.exp
File "anon1.php", line 9, characters 5-6:
Variable `$x` is undefined, or not always defined. (Naming[2050])
File "anon1.php", line 6, characters 27-28:
Did you mean `$y` instead?
